apex/grammar.js
    parser_output: ($) => repeat($.statement),

    // Expressions

    cast_expression: ($) =>
      prec(
        PREC.CAST,
        seq("(", field("type", $._type), ")", field("value", $.expression)),
      ),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.identifier, $.field_access, $.array_access)),
          field(
            "operator",
            alias(
              choice(
                "=",
                "+=",
                "-=",
                "*=",
                "/=",
                "&=",
                "|=",
                "^=",
                "%=",
                "<<=",
                token(seq("<", /[\s\n]*/, "<", /[\s\n]*/, "=")),
                token(seq(">", /[\s\n]*/, ">", /[\s\n]*/, "=")),
                token(seq(">", /[\s\n]*/, ">", /[\s\n]*/, ">", /[\s\n]*/, "=")),
              ),
              $.assignment_operator,
            ),
          ),
          field("right", $.expression),
        ),
      ),

    instanceof_expression: ($) =>
      prec(
        PREC.REL,
        seq(
          field("left", $.expression),
          ci("instanceof"),
          field("right", $._type),
        ),
      ),

    update_expression: ($) =>
      prec.left(
        PREC.UNARY,
        choice(
          // Post (in|de)crement is evaluated before pre (in|de)crement
          seq(
            field("operand", $.expression),
            field("operator", $.update_operator),
          ),
          seq(
            field("operator", $.update_operator),
            field("operand", $.expression),
          ),
        ),
      ),

    update_operator: ($) => choice("++", "--"),

    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    object_creation_expression: ($) =>
      prec.right(
        seq(
          ci("new"),
          field("type_arguments", optional($.type_arguments)),
          field("type", $._simple_type),
          field("arguments", $.argument_list),
          optional($.class_body),
        ),
      ),

    _property_navigation: ($) => choice($.safe_navigation_operator, "."),

    method_invocation: ($) =>
      seq(
        choice(
          field("name", $.identifier),
          seq(
            field("object", choice($.primary_expression, $.super)),
            $._property_navigation,
            field("type_arguments", optional($.type_arguments)),
            field("name", $.identifier),
          ),
        ),
        field("arguments", $.argument_list),
      ),

    argument_list: ($) => seq("(", commaJoined($.expression), ")"),

    block: ($) => seq("{", repeat($.statement), "}"),

    expression_statement: ($) => seq($.expression, ";"),

    return_statement: ($) => seq(ci("return"), optional($.expression), ";"),

    if_statement: ($) =>
      prec.right(
        seq(
          ci("if"),
          field("condition", $.parenthesized_expression),
          field("consequence", $.statement),
          optional(seq(ci("else"), field("alternative", $.statement))),
        ),
      ),

    annotation: ($) =>
      seq(
        "@",
        field("name", $._name),
        optional(field("arguments", $.annotation_argument_list)),
      ),

    annotation_argument_list: ($) =>
      seq(
        "(",
        choice(
          field("value", $._element_value),
          repeat($.annotation_key_value),
        ),
        ")",
      ),
    annotation_key_value: ($) =>
      seq(
        field("key", $.identifier),
        alias("=", $.assignment_operator),
        field("value", $._element_value),
      ),

    _element_value: ($) =>
      prec(
        PREC.ELEMENT_VAL,
        choice($.expression, $.element_value_array_initializer, $.annotation),
      ),

    enum_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("enum"),
        field("name", $.identifier),
        field("interfaces", optional($.interfaces)),
        field("body", $.enum_body),
      ),

    enum_body: ($) => seq("{", commaJoined($.enum_constant), "}"),

    enum_constant: ($) =>
      seq(optional($.modifiers), field("name", $.identifier)),

    class_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("class"),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(field("superclass", $.superclass)),
        optional(field("interfaces", $.interfaces)),
        field("body", $.class_body),
      ),

    modifiers: ($) => repeat1(choice($.annotation, $.modifier)),

    modifier: ($) =>
      choice(
        $.global,
        $.public,
        $.testMethod,
        $.webservice,
        $.protected,
        $.override,
        $.private,
        $.virtual,
        $.abstract,
        $.static,
        $.final,
        $.transient,
        $.with_sharing,
        $.without_sharing,
        $.inherited_sharing,
      ),

    global: ($) => ci("global"),
    public: ($) => ci("public"),
    testMethod: ($) => ci("testMethod"),
    webservice: ($) => ci("webservice"),
    private: ($) => ci("private"),
    static: ($) => ci("static"),
    final: ($) => ci("final"),
    without_sharing: ($) => ci("without sharing"),
    superclass: ($) => seq(ci("extends"), $._type),

    class_body: ($) => seq("{", repeat($._class_body_declaration), "}"),

    _class_body_declaration: ($) =>
      choice(
        $.field_declaration,
        $.method_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
        $.block,
        $.static_initializer,
        $.constructor_declaration,
        ";",
      ),

    constructor_declaration: ($) =>
      seq(
        optional($.modifiers),
        $._constructor_declarator,
        field("body", $.constructor_body),
      ),

    _constructor_declarator: ($) =>
      seq(
        field("type_parameters", optional($.type_parameters)),
        field("name", $.identifier),
        field("parameters", $.formal_parameters),
      ),

    constructor_body: ($) =>
      seq(
        "{",
        optional($.explicit_constructor_invocation),
        repeat($.statement),
        "}",
      ),

    explicit_constructor_invocation: ($) =>
      seq(
        choice(
          seq(
            field("type_arguments", optional($.type_arguments)),
            field("constructor", choice($.this, $.super)),
          ),
          seq(
            field("object", choice($.primary_expression)),
            ".",
            field("type_arguments", optional($.type_arguments)),
            field("constructor", $.super),
          ),
        ),
        field("arguments", $.argument_list),
        ";",
      ),

    _name: ($) => choice($.identifier, $.scoped_identifier),

    field_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        choice($.accessor_list, ";"),
      ),

    _variable_declarator_list: ($) =>
      commaJoined1(field("declarator", $.variable_declarator)),

    variable_declarator: ($) =>
      seq(
        $._variable_declarator_id,
        optional(
          seq(
            alias("=", $.assignment_operator),
            field("value", $._variable_initializer),
          ),
        ),
      ),

    _variable_declarator_id: ($) =>
      seq(
        field("name", $.identifier),
        field("dimensions", optional($.dimensions)),
      ),

    _variable_initializer: ($) => choice($.expression, $.array_initializer),

    _type: ($) => choice($._unannotated_type, $.annotated_type),

    _unannotated_type: ($) => choice($._simple_type, $.array_type),

    void_type: ($) => ci("void"),

    _simple_type: ($) =>
      choice(
        $.void_type,
        $.boolean_type,
        alias($.identifier, $.type_identifier),
        $.scoped_type_identifier,
        $.java_type,
        $.generic_type,
      ),

    _method_header: ($) =>
      seq(
        optional(
          seq(
            field("type_parameters", $.type_parameters),
            repeat($.annotation),
          ),
        ),
        field("type", $._unannotated_type),
        $._method_declarator,
      ),

    formal_parameters: ($) => seq("(", commaJoined($.formal_parameter), ")"),

    formal_parameter: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_id,
      ),

    local_variable_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        ";",
      ),

    method_declaration: ($) =>
      seq(
        optional($.modifiers),
        $._method_header,
        choice(field("body", $.block), ";"),
      ),

    this: ($) => ci("this"),

    super: ($) => ci("super"),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    line_comment: ($) => token(prec(PREC.COMMENT, seq("//", /[^\r\n]*/))),

    block_comment: ($) =>
      token(prec(PREC.COMMENT, seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))),

    identifier: ($) => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // Literals

    int: ($) => token(seq(DIGITS, optional(choice("l", "L")))),

    string_literal: ($) => /'(\\[nNrRtTbBfFuU"'_%\\]|[^\\'])*'/,
