apex/test/corpus/methods.txt
================================================================================
METHOD public
================================================================================

public class Me {
    public void method1(String param1, Integer param2){
        param1 = '1';
        param2 = 2;
    }
}

--------------------------------------------------------------------------------

(parser_output
  (class_declaration
    (modifiers
      (modifier
        (public)))
    (identifier)
    (class_body
      (method_declaration
        (modifiers
          (modifier
            (public)))
        (void_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (type_identifier)
            (identifier))
          (formal_parameter
            (type_identifier)
            (identifier)))
        (block
          (expression_statement
            (assignment_expression
              (identifier)
              (assignment_operator)
              (string_literal)))
          (expression_statement
            (assignment_expression
              (identifier)
              (assignment_operator)
              (int))))))))

================================================================================
METHOD private return
================================================================================

public class Me {
    private Integer method1(Integer param1){
        return param1;
    }
}

--------------------------------------------------------------------------------

(parser_output
  (class_declaration
    (modifiers
      (modifier
        (public)))
    (identifier)
    (class_body
      (method_declaration
        (modifiers
          (modifier
            (private)))
        (type_identifier)
        (identifier)
        (formal_parameters
          (formal_parameter
            (type_identifier)
            (identifier)))
        (block
          (return_statement
            (identifier)))))))

================================================================================
METHOD global static
================================================================================

public class Me {
    global static Integer method1(Integer param1){
        return param1;
    }
}

--------------------------------------------------------------------------------

(parser_output
  (class_declaration
    (modifiers
      (modifier
        (public)))
    (identifier)
    (class_body
      (method_declaration
        (modifiers
          (modifier
            (global))
          (modifier
            (static)))
        (type_identifier)
        (identifier)
        (formal_parameters
          (formal_parameter
            (type_identifier)
            (identifier)))
        (block
          (return_statement
            (identifier)))))))

================================================================================
METHOD Modifier on parameter
================================================================================

public class Me {
    public void helloWorld(final Integer i){
        System.debug(i);
    }
}

--------------------------------------------------------------------------------

(parser_output
  (class_declaration
    (modifiers
      (modifier
        (public)))
    (identifier)
    (class_body
      (method_declaration
        (modifiers
          (modifier
            (public)))
        (void_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (modifiers
              (modifier
                (final)))
            (type_identifier)
            (identifier)))
        (block
          (expression_statement
            (method_invocation
              (identifier)
              (identifier)
              (argument_list
                (identifier)))))))))

================================================================================
METHOD testMethod modifier
================================================================================

public class Me {
    public testMethod void helloWorld(){
        System.debug(i);
    }
}

--------------------------------------------------------------------------------

(parser_output
  (class_declaration
    (modifiers
      (modifier
        (public)))
    (identifier)
    (class_body
      (method_declaration
        (modifiers
          (modifier
            (public))
          (modifier
            (testMethod)))
        (void_type)
        (identifier)
        (formal_parameters)
        (block
          (expression_statement
            (method_invocation
              (identifier)
              (identifier)
              (argument_list
                (identifier)))))))))

================================================================================
METHOD webservice modifier
================================================================================

global class Me {
    webservice static void helloWorld(){
    }
}

--------------------------------------------------------------------------------

(parser_output
  (class_declaration
    (modifiers
      (modifier
        (global)))
    (identifier)
    (class_body
      (method_declaration
        (modifiers
          (modifier
            (webservice))
          (modifier
            (static)))
        (void_type)
        (identifier)
        (formal_parameters)
        (block)))))
